	PR middle-end/35611 	* gimplify.c (gimplify_expr): Gimplify second operand of 	OMP_ATOMIC_LOAD.

* testsuite/libgomp.c/atomic-4.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@133309 138bc75d-0d04-0410-961f-82ee72b054a4